Fix bug on deploy

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:fix": "eslint ./src --fix"
   },
   "dependencies": {
+    "@codemod/cli": "^3.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
